--- a/index.html
+++ b/index.html
@@ -55,27 +55,38 @@
       </div>
     </div>
 
-    <!-- Services Section -->
-    <div class="services">
-        <h1>Cool Projects</h1>
-        <div class="services__container">
-            <div class="services__card fade-in">
-              <img src="images/IMG_0432.jpeg" alt="Photography Portfolio Image" class="services__img">
-                <h2>Photography Portfolio</h2>
-                <p>Personal Favourites</p>
-                <a href="collage.html">
-                  <button>Expand</button>
-                </a>
-            </div>
-            <div class="services__card fade-in">
-              <img src="images/KL2C.jpeg" alt="Kids Learn2Code Image" class="services__img">
-                <h2>Kids Learn2Code</h2>
-                <p>A fun, hands-on coding workshop designed to inspire and empower kids to explore the world of technology. </p>
-                
-            </div>
+<!-- Services Section -->
+<div class="services">
+    <h1>Cool Projects</h1>
+    <div class="services__container">
+        <!-- Project Card 1 -->
+        <div class="services__card fade-in">
+            <img src="images/IMG_0432.jpeg" alt="Photography Portfolio Image" class="services__img">
+            <h2>Photography Portfolio</h2>
+            <p>Personal Favourites</p>
+            <a href="collage.html">
+                <button>Expand</button>
+            </a>
+        </div>
+
+        <!-- Project Card 2 -->
+        <div class="services__card fade-in">
+            <img src="images/KL2C.jpeg" alt="Kids Learn2Code Image" class="services__img">
+            <h2>Kids Learn2Code</h2>
+            <p>A fun, hands-on coding workshop designed to inspire and empower kids to explore the world of technology.</p>
+        </div>
+
+        <!-- Project Card 3: Stock Predictor -->
+        <div class="services__card fade-in">
+            <img src="images/StockPredictor7.0.gif" alt="Stock Predictor GIF" class="services__img">
+            <h2>Stock Predictor 7.0</h2>
+            <p>Advanced stock market forecasting tool leveraging machine learning and data visualization.</p>
+            <a href="stock_predictor.html">
+                <button>Explore</button>
+            </a>
         </div>
     </div>
-
+</div>
     <!-- Footer Section -->
     <div class="footer__container">
         <div class="footer__links">
