--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
         <!-- Project Card 3: Stock Predictor -->
         <div class="services__card fade-in">
-            <img src="images/StockPredictor7.0.gif" alt="Stock Predictor GIF" class="services__img">
+            <img src="images/StockPredictor7.0.gif" alt="Stock Predictor" class="services__img">
             <h2>Stock Predictor 7.0</h2>
             <p>Advanced stock market forecasting tool leveraging machine learning and data visualization.</p>
             <a href="stock_predictor.html">
