Update index.html Projects section

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       </div>
     </div>
 
-<!-- Services Section -->
+<!-- Projects Section -->
 <div class="services">
     <h1>Cool Projects</h1>
     <div class="services__container">
@@ -82,7 +82,7 @@
             <h2>Stock Predictor 7.0</h2>
             <p>Advanced stock market forecasting tool leveraging machine learning and data visualization.</p>
             <a href="stock_predictor.html">
-                <button>Explore</button>
+
             </a>
         </div>
     </div>
