--- a/index.html
+++ b/index.html
@@ -77,14 +77,11 @@
         </div>
 
         <!-- Project Card 3: Stock Predictor -->
-        <div class="services__card fade-in">
-            <img src="images/StockPredictor7.0.gif" alt="Stock Predictor" class="services__img">
-            <h2>Stock Predictor 7.0</h2>
-            <p>Advanced stock market forecasting tool leveraging machine learning and data visualization.</p>
-            <a href="stock_predictor.html">
-
-            </a>
-        </div>
+  <div class="services__card fade-in">
+    <img src="images/StockPredictor7.0.gif" alt="Stock Predictor GIF" class="services__img">
+    <h2>Stock Predictor 7.0</h2>
+    <p>Advanced stock market forecasting tool leveraging machine learning and data visualization.</p>
+</div>
     </div>
 </div>
     <!-- Footer Section -->
