--- a/index.html
+++ b/index.html
@@ -77,10 +77,15 @@
         </div>
 
         <!-- Project Card 3: Stock Predictor -->
-  <div class="services__card fade-in">
+<div class="services__card fade-in">
+  <!-- Image Container -->
+  <div class="services__img-container">
     <img src="images/StockPredictor7.0.gif" alt="Stock Predictor GIF" class="services__img">
-    <h2>Stock Predictor 7.0</h2>
-    <p>Advanced stock market forecasting tool leveraging machine learning and data visualization.</p>
+  </div>
+
+  <!-- Text Content -->
+  <h2>Stock Predictor 7.0</h2>
+  <p>Advanced stock market forecasting tool leveraging machine learning and data visualization.</p>
 </div>
     </div>
 </div>
