--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
   </div>
 
   <!-- Text Content -->
-  <h2>Stock Predictor 7.0</h2>
+  <h2>Stock Predictor</h2>
   <p>Advanced stock market forecasting tool leveraging machine learning and data visualization.</p>
 </div>
     </div>
